--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -1,7 +1,7 @@
 // ========== STYLING FOR MENU & ABOUT HEADERS ==========
 .header {
   position: relative;
-  height: 30%;
+  height: 35%;
   z-index: 10;
   background-color: transparent;
   // ========== ABOUT HEADER SPECIFIC STYLING ==========
